--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "index_name": "v3-docs",
-  "start_urls": ["https://docs.uniswap.org/"],
-  "sitemap_urls": ["https://docs.uniswap.org/sitemap.xml"],
+  "start_urls": ["https://docs.etcswap.org/"],
+  "sitemap_urls": ["https://docs.etcswap.org/sitemap.xml"],
   "sitemap_alternate_links": true,
   "stop_urls": [],
   "selectors": {
